Affichage du nombre de points gagnés sur une partie jouée de Rankedle

--- a/views/rankedle/rankedle.ejs
+++ b/views/rankedle/rankedle.ejs
@@ -194,6 +194,8 @@
                                                                     </button>
                                                                 </div>
 
+                                                                <p class="text-secondary">Tu as gagné <%= result.points %> point<%= result.points > 1 ? 's' : '' %></p>
+
                                                                 <div class="my-4">
                                                                     <h2 class="fw-bold">Prochain Rankedle dans <span id="countdown"></span></h2>
                                                                 </div>
