Utilisation de la librairie Howler pour la lecture du fichier audio

--- a/views/rankedle/rankedle.ejs
+++ b/views/rankedle/rankedle.ejs
@@ -566,6 +566,7 @@
     <script src="/static/assets/libs/emoji-mart/browser.js"></script>
     <script src="/static/assets/js/app.js"></script>
     <% if(user.isBSFR) { %>
+    <script src="/static/assets/libs/howler/howler.min.js"></script>
     <script src="/static/assets/js/rankedle.js"></script>
     <% } %>
 </body>
