Chargement des images localement

--- a/views/forms/run/youtube.ejs
+++ b/views/forms/run/youtube.ejs
@@ -366,14 +366,14 @@
 
                     <div class="d-flex justify-content-center">
                         <figure class="figure text-center">
-                            <a href="https://cdn.discordapp.com/attachments/907724370917617754/1044360526764965918/02.jpg" target="_blank" style="cursor:zoom-in">
-                                <img src="https://cdn.discordapp.com/attachments/907724370917617754/1044360526764965918/02.jpg" alt="Capture d'écran montrant l'emplacement du bouton replay" class="rounded figure-img" width="50%">
+                            <a href="/static/assets/images/forms/run/youtube/quest/02.jpg" target="_blank" style="cursor:zoom-in">
+                                <img src="/static/assets/images/forms/run/youtube/quest/02.jpg" alt="Capture d'écran montrant l'emplacement du bouton replay" class="rounded figure-img" width="50%">
                             </a>
                             <figcaption class="figure-caption">image 1</figcaption>
                         </figure>
                         <figure class="figure text-center">
-                            <a href="https://cdn.discordapp.com/attachments/907724370917617754/1044360526504931369/01.jpg" target="_blank" style="cursor:zoom-in">
-                                <img src="https://cdn.discordapp.com/attachments/907724370917617754/1044360526504931369/01.jpg" alt="Capture d'écran montrant les options d'enregistrement du replay" class="rounded figure-img" width="50%">
+                            <a href="/static/assets/images/forms/run/youtube/quest/01.jpg" target="_blank" style="cursor:zoom-in">
+                                <img src="/static/assets/images/forms/run/youtube/quest/01.jpg" alt="Capture d'écran montrant les options d'enregistrement du replay" class="rounded figure-img" width="50%">
                             </a>
                             <figcaption class="figure-caption">image 2</figcaption>
                         </figure>
