--- a/views/map.ejs
+++ b/views/map.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/static/assets/css/map.css">
     <link rel="stylesheet" href="/static/assets/libs/leaflet/leaflet.css">
     <script src="/static/assets/libs/leaflet/leaflet.js"></script>
+    <script src="/static/assets/libs/leaflet/esri-leaflet.js"></script>
+    <script src="/static/assets/libs/leaflet/esri-leaflet-vector.js"></script>
     <title>Beat Saber FR - Carte interactive</title>
 </head>
 <body class="">
