--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -16,14 +16,16 @@
                     <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu" aria-expanded="false">
                         <span class="avatar avatar-sm" style="background-image: url(<%= user.avatarURL %>?size=80)"></span>
                         <div class="d-none d-xl-block ps-2">
-                            <div><%= user.username %></div>
+                            <div><%= user.name %></div>
                         </div>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
                         <% if(user.isAdmin) { %>
                         <a href="/agent/" class="dropdown-item">Agent</a>
                         <a href="/admin/" class="dropdown-item">Administration</a>
+                        <div class="dropdown-divider"></div>
                         <% } %>
+                        <!-- <a href="/runs" class="dropdown-item<%= page === 'runs' ? ' active' : '' %>">Mes runs</a> -->
                         <a href="/settings" class="dropdown-item<%= page === 'settings' ? ' active' : '' %>">Paramètres</a>
                         <div class="dropdown-divider"></div>
                         <a href="/discord/logout" class="dropdown-item">Déconnexion</a>
