--- a/src/app/Components/Accueil/accueil.component.html
+++ b/src/app/Components/Accueil/accueil.component.html
@@ -1,138 +1,103 @@
-<div class="page-wrapper">
-  <div class="container-xl">
-    <!-- Page title -->
-    <div class="page-header d-print-none">
-      <div class="row g-2 align-items-center">
-        <div class="col">
-          <h2 class="page-title">
-            Bienvenue sur le site de la communauté francophone de Beat Saber !
-          </h2>
-        </div>
-      </div>
-    </div>
+<div class="py-6">
+  <!-- Page title -->
+  <div class="">
+    <h2>Accueil</h2>
   </div>
   <div class="page-body">
     <div class="container-xl">
-      <div class="card mb-3">
-        <div class="card-body">
-          <h5 class="card-title">Nous rejoindre !</h5>
+      <p-card
+        header="Actualités"
+        styleClass="rounded-md bg-white/10 backdrop-blur-xl shadow-lg ring-1 ring-black/10">
+        <div>
+          <div class="text-muted">jeudi 01 juin 2023</div>
 
-          <div class="btn-list">
-            <a href="" target="_blank" class="btn btn-discord">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="icon"
-                width="24"
-                height="24"
-                viewBox="0 0 127.14 96.36"
-                fill="#5865f2">
-                <path
-                  d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z" />
-              </svg>
-              Discord
-            </a>
-            <a
-              href="https://www.youtube.com/c/BeatSaberFR"
-              target="_blank"
-              class="btn btn-youtube">
-              <span [innerHTML]="icons.youtube | svg"></span>
-              YouTube
-            </a>
-            <a
-              href="https://twitch.tv/BeatSaberFR"
-              target="_blank"
-              class="btn btn-twitch">
-              <span [innerHTML]="icons.twitch | svg"></span>
-              Twitch
-            </a>
-            <a
-              href="https://twitter.com/beatsaberfr"
-              target="_blank"
-              class="btn btn-twitter">
-              <span [innerHTML]="icons.twitter | svg"></span>
-              Twitter
-            </a>
-          </div>
+          <h2>Joyeux mois des fiertés tout le monde ! 🏳️‍🌈</h2>
+
+          <p>
+            Beat Saber FR s'habille également des couleurs RGB car on est des
+            GAYmers avant tout 😎
+          </p>
+          <p>
+            <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour
+            l'occasion !
+          </p>
+
+          <a
+            pButton
+            pRipple
+            href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber"
+            class="no-underline text-[var(--text-color)]">
+            <span [innerHTML]="icons.download | svg" class="me-3"></span>
+            BSFR_Saber_v1.4_Rainbow.saber
+          </a>
         </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Actualités</h5>
+        <p-divider type="dashed" />
+        <div>
+          <div class="text-muted">samedi 22 avril 2023</div>
 
-          <div>
-            <div class="text-muted">jeudi 01 juin 2023</div>
+          <h2>BSFR Saber v1.4</h2>
 
-            <h2>Joyeux mois des fiertés tout le monde ! 🏳️‍🌈</h2>
+          <u>Changelog :</u>
+          <ul>
+            <li>La tour Eiffel apparaît maintenant plus loin</li>
+            <li>Le poids du fichier a été réduit</li>
+          </ul>
 
-            <p>
-              Beat Saber FR s'habille également des couleurs RGB car on est des
-              GAYmers avant tout 😎
-            </p>
-            <p>
-              <strong>&#64;Ralex</strong> a mis à jour les sabres BSFR pour
-              l'occasion !
-            </p>
+          <a
+            pButton
+            pRipple
+            href="/static/sabers/BSFR_Saber_v1.4.saber"
+            class="no-underline text-[var(--text-color)]">
+            <span [innerHTML]="icons.download | svg" class="me-3"></span>
+            BSFR_Saber_v1.4.saber
+          </a>
+        </div>
+        <p-divider type="dashed" />
+        <div>
+          <div class="text-muted">mardi 10 janvier 2023</div>
 
-            <a class="btn" href="/static/sabers/BSFR_Saber_v1.4_Rainbow.saber">
-              <span [innerHTML]="icons.download | svg"></span>
-              BSFR_Saber_v1.4_Rainbow.saber
-            </a>
-          </div>
-          <hr />
-          <div>
-            <div class="text-muted">samedi 22 avril 2023</div>
+          <h2>Publication de run Beat Saber</h2>
 
-            <h2>BSFR Saber v1.4</h2>
+          Les joueurs Quest ont désormais la possibilité de soumettre des runs
+          depuis le formulaire de publication de run !
+        </div>
+        <p-divider type="dashed" />
+        <div>
+          <div class="text-muted">samedi 15 octobre 2022</div>
 
-            <u>Changelog :</u>
-            <ul>
-              <li>La tour Eiffel apparaît maintenant plus loin</li>
-              <li>Le poids du fichier a été réduit</li>
-            </ul>
+          <h2>BSFR Saber !</h2>
 
-            <a class="btn" href="/static/sabers/BSFR_Saber_v1.4.saber">
-              <span [innerHTML]="icons.download | svg"></span>
-              BSFR_Saber_v1.4.saber
-            </a>
-          </div>
-          <hr />
-          <div>
-            <div class="text-muted">mardi 10 janvier 2023</div>
-
-            <h2>Publication de run Beat Saber</h2>
-
-            Les joueurs Quest ont désormais la possibilité de soumettre des runs
-            depuis le formulaire de publication de run !
-          </div>
-          <hr />
-          <div>
-            <div class="text-muted">samedi 15 octobre 2022</div>
-
-            <h2>BSFR Saber !</h2>
-
+          <p>
             Heyow tout le monde !<br />
             <br />
             Après quelque temps passé à élaborer les sabres, nous avons le
             plaisir de vous présenter les sabres BSFR !<br />
             Ils ont été créés par notre cher <strong>&#64;Ralex</strong> ! Merci
-            encore à toi &lt;3<br />
-            <a class="btn" href="/static/sabers/BSFR_Saber_v1.1.saber">
-              <span [innerHTML]="icons.download | svg"></span>
-              BSFR_Saber_v1.1.saber
-            </a>
-          </div>
-          <hr />
-          <div>
-            <div class="text-muted">vendredi 6 Août 2022</div>
+            encore à toi &lt;3
+          </p>
 
-            <h2>Multi POV BSFR #3</h2>
+          <a
+            pButton
+            pRipple
+            href="/static/sabers/BSFR_Saber_v1.1.saber"
+            class="no-underline text-[var(--text-color)]">
+            <span [innerHTML]="icons.download | svg" class="me-3"></span>
+            BSFR_Saber_v1.1.saber
+          </a>
+        </div>
+        <p-divider type="dashed" />
+        <div>
+          <div class="text-muted">vendredi 6 Août 2022</div>
 
+          <h2>Multi POV BSFR #3</h2>
+
+          <p>
             Les soumissions de run pour le Multi POV #3 sont ouvertes !<br />
             Vous avez jusqu'au vendredi 16 décembre 23h00 pour nous faire
             parvenir votre run.
-          </div>
+          </p>
         </div>
-      </div>
+      </p-card>
     </div>
   </div>
 </div>
